--- a/index.html
+++ b/index.html
@@ -188,10 +188,7 @@
             <div class="product-info-secondary">
                 <p>$35,00</p>
                 <p>Bike</p>
-                <p>
-                    With its practical position, this bike also fulfills a
-                    decorative function, add your hall or workspace.
-                </p>
+                <p>Is just another bike.</p>
                 <button class="primary-button add-to-cart-button">
                     <img src="./icons/bt_add_to_cart.svg" alt="add to cart" />
                     Add to cart
